syntax = "proto3";

package authservice;

option go_package = ".;authservice";

message SessionID{
    string ID = 1;
}

message Session {
    int32 userID = 1;
}

message Nothing {
    bool dummy = 1;
}

service AuthService{
    rpc Create (Session) returns (SessionID) {}
    rpc Check (SessionID) returns (Session) {}
    rpc Delete (SessionID) returns (Nothing) {}
}